Fix up spacing

--- a/hlx_statics/blocks/announcement.css
+++ b/hlx_statics/blocks/announcement.css
@@ -1,9 +1,8 @@
 main div.announcement {
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
   background-color: #fff;
 } 
-
-
 
